# Project-I

./: CMakeLists.txt  count
asset/: tung.fs  ui.fs  ui.vs
assets/: tung.vs  ui.fs
include/: asset_manager.hpp  root.hpp
include/graphics/: color.hpp  opengl_info.h  shader_program.h  ui_shader_program.h  vertex_object.h
include/logic/: actor.hpp  actor_component.hpp  collision_component.hpp  collision_system.hpp  event.hpp  event_manager.hpp  game_logic.hpp  plane_component.hpp  plane_factory.hpp  position_component.hpp  process_manager.hpp  sound_system.hpp  timer.hpp
include/sound/: sound.h  sound.hpp
include/view/: image_view.hpp  text.hpp  text_view.hpp  view.h  view.hpp
src/: CMakeLists.txt  asset_manager.cpp  main.cpp  root.cpp
src/graphics/: CMakeLists.txt  color.cpp  glfw.cpp  opengl_info.cpp  shader_program.cpp  ui_shader_program.cpp
src/graphics/gl/: CMakeLists.txt  drawable.cpp  drawable_factory.cpp  glfw.cpp  null_drawable.cpp  opengl_info.cpp  shader_program.cpp  simple_2d_shader.cpp  sprite_drawable.cpp  text_factory.cpp  text_manager.cpp  texture.cpp  ui_shader_program.cpp  vertex_object.cpp
src/logic/: CMakeLists.txt  actor.cpp  collision_component.cpp  collision_system.cpp  event_manager.cpp  game_logic.cpp  plane_component.cpp  plane_factory.cpp  position_component.cpp  process_manager.cpp  sound_system.cpp  timer.cpp
src/sound/: CMakeLists.txt  sound.cpp
src/view/: CMakeLists.txt  image_view.cpp  text.cpp  text_view.cpp  view.cpp
tests/: CMakeLists.txt  main.cpp
tests/logic/: actor.cpp  actor_collision.cpp  event.cpp  (+1 more)
(+124 files in other folders)
